@@ -1,3 +1,10 @@
+2009-11-12	The InnoDB Team
+
+	* handler/ha_innodb.cc, include/db0err.h,
+	row/row0merge.c, row/row0mysql.c:
+	Allow CREATE INDEX to be interrupted.
+	Also, when CHECK TABLE is interrupted, report ER_QUERY_INTERRUPTED.
+
 2009-11-11	The InnoDB Team
 
 	* handler/ha_innodb.cc, mysql-test/innodb_bug47167.result,
